# yqdotfiles

./: .authinfo.gpg  .bashrc  .chunkwmrc  .dir-locals.el  .envrc  .eslintrc.js  .fzf.bash  .fzf.zsh  .gemrc  .gitconfig  .gitignore  .gitignore_global  .gitmodules  .huskyrc  .ideavimrc  .jscsrc  .mackup.cfg  .macos  .mailcap  .mbsyncrc  .mrconfig  .ngrok2  .orun  .p10k.zsh  .phoenix.js  .powerline-shell.json  .ripgreprc  .sbclrc  .sops.yaml  .spacemacs  .surge.conf  .tern-config  .tern-project  .tmux.conf  .tmux.conf.local  .tridactylrc  .yabairc  .ycm_extra_conf.py  .zshenv  .zshrc  (+19 more)
.SpaceVim/: default.vim  foldtext.vim  init.vim  plugins.vim
.config/: clash  clojure  dropzone.d  karabiner.edn  kitty.conf  macos.sh  personal_dict  starship.toml  topgrade.toml
.doom.d/: .dir-locals.el  .gitignore  WORKSPACE-ISOLATION.md  acp-integration.el  ai-behaviors-test.el  ai-behaviors.el  autoload.el  b1.org  b2.org  b3.org  b4.org  better-default.el  clisp.el  clj-elisp.el  clj-test.el  clj.el  clojure.el  completion.el  config.el  custom.el  elfeed-dashboard.org  elisp.el  embr.el  ethereum.el  evil.el  forgeghp.el  funcs.el  golang.el  gpt.el  gptel-extra-test.el  gptel-extra.el  gptel-llm-fns.el  gptel-tools.el  helper.el  init-tabnine-capf.el  init.el  js.el  keybindings.el  lang.el  lisp.el  (+17 more)
.dotfiles/: .jscsrc
.emacs.d/: .gitignore  diary  init.el  saveplace
.hammerspoon/: basicmode.lua  command-q-twice.lua  ctrl_escape.lua  init.lua  modalmgr.lua
modules/yqrashawn/emacs/fuzzy-matcher/: Cargo.toml  rustfmt.toml
modules/yqrashawn/emacs/fuzzy-matcher/src/: lib.rs
(+2604 files in other folders)
